objects/ssot__EngagementAnalysisText__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConversationEntryId__c</fullName>
        <label>[DoNotUse]Conversation Entry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>[DoNotUse]Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceApplicationName__c</fullName>
        <label>[DoNotUse]Data Source Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndOffsetNumber__c</fullName>
        <label>[DoNotUse]End Offset</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisPayloadText__c</fullName>
        <label>Engagement Analysis Payload</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextEndDateTime__c</fullName>
        <label>Engagement Analysis Text End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextSessionId__c</fullName>
        <label>Engagement Analysis Text Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextStartDateTime__c</fullName>
        <label>Engagement Analysis Text Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelSourceType__c</fullName>
        <label>Engagement Channel Source Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Analysis Text Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsightsExtractionStatus__c</fullName>
        <label>Insights Extraction Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>[DoNotUse]Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MomentOffsetNumber__c</fullName>
        <label>[DoNotUse]Moment Offset</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>[DoNotUse]Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartOffsetNumber__c</fullName>
        <label>[DoNotUse]Start Offset</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546697811_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementAnalysisText_EngagementAna_rel</label>
        <referenceTo>ssot__EngagementAnalysisTextSession__dlm</referenceTo>
        <relationshipLabel>EngagementAnalysisText_EngagementAna_rel</relationshipLabel>
        <relationshipName>rel_1718546697811_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1760066978562_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementAnalysisText_ConversationE_rel</label>
        <referenceTo>ssot__ConversationEntry__dlm</referenceTo>
        <relationshipLabel>EngagementAnalysisText_ConversationE_rel</relationshipLabel>
        <relationshipName>rel_1760066978562_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>